src/styles/aplayer.css
html.dark .aplayer {
  background: rgb(24, 24, 28);
}

html.dark .aplayer .aplayer-list ol li {
  border-top: 1px solid #161616
}

html.dark .aplayer .aplayer-list ol li.aplayer-list-light {
  background: #161616
}

html.dark .aplayer.aplayer-withlist .aplayer-info {
  border-bottom: 1px solid #161616
}

html.dark .aplayer .aplayer-lrc::before, html.dark .aplayer .aplayer-lrc::after {
  background: linear-gradient(180deg,hsla(240,7.7%,10.2%,0) 0,hsla(240,7.7%,10.2%,.8));
}

